--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: keepsettings
 description: Settings UI
 version: 0.0.1
+homepage: https://github.com/ProblematicDude/keepsettings
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
